eks-fargate-docdb/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dailylog
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      name: back-pod
      labels:
        tier: backend
    spec:
      containers:
      - name: backend-container
        image: yk1700/team3-back:2.0
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dailylog
spec:
  selector:
    tier: backend
  ports:
  - port: 8000
    targetPort: 8000
