eks-fargate-docdb/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: diaryweb
  labels:
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:  
      tier: frontend
  template:
    metadata:
      name: front-pod
      labels:
        tier: frontend
    spec:
      containers:
      - name: frontend-container
        image: kva231/frontend:6.0
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: diaryweb
spec:
  selector: 
    tier: frontend
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
